# romulus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  soul.md
docs/: REFERENCES.md  USER_GUIDE.md
romulus/: api.py  config.py  platform.py  romulus.py
romulus/agent/: core.py  tools.py
romulus/arena/: monitor.py
romulus/chronicle/: database.py  episodic.py  identity.py  semantic.py
romulus/dream/: engine.py  extractor.py  pruner.py  replay.py
romulus/llm/: client.py  prompts.py
romulus/models/: actions.py  arena.py  dream.py  episodic.py  identity.py  semantic.py  vigil.py
romulus/vigil/: adaptive.py  incidents.py  innate.py  innate_rules.yaml  sentinel.py
static/: index.html
static/css/: wolfden.css
static/js/: wolfden.js
tests/: test_agent_tools.py  test_arena.py  test_chronicle.py  test_models.py  test_proof_of_life.py  test_vigil.py
